--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,6 @@
 {
   "cli": {
-    "version": ">= 5.0.0"
+    "version": ">= 3.0.0"
   },
   "build": {
     "preview": {
@@ -8,10 +8,9 @@
         "buildType": "apk"
       }
     },
-    "production": {
-      "android": {
-        "buildType": "apk"
-      }
-    }
+    "production": {}
+  },
+  "submit": {
+    "production": {}
   }
 }
